fix: add unit tests for mergeRoles

--- a/services/libs/data-access-layer/package.json
+++ b/services/libs/data-access-layer/package.json
@@ -5,7 +5,11 @@
     "lint": "npx eslint --ext .ts src --max-warnings=0",
     "format": "npx prettier --write \"src/**/*.ts\"",
     "format-check": "npx prettier --check .",
-    "tsc-check": "tsc --noEmit"
+    "tsc-check": "tsc --noEmit",
+      "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@crowd/common": "workspace:*",
@@ -23,10 +27,10 @@
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "lodash.map": "^4.6.0",
-    "lodash.merge": "^4.6.2",
-    "lodash.pickby": "^4.6.0",
     "lodash.max": "^4.0.1",
+    "lodash.merge": "^4.6.2",
     "lodash.min": "^4.0.1",
+    "lodash.pickby": "^4.6.0",
     "moment": "~2.29.4",
     "pg-promise": "^11.4.3",
     "pg-query-stream": "^4.7.0",
@@ -35,7 +39,10 @@
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
+    "@vitest/ui": "^3.2.4",
     "sequelize": "6.21.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite": "^7.1.9",
+    "vitest": "^3.2.4"
   }
 }
