--- a/services/apps/git_integration/pyproject.toml
+++ b/services/apps/git_integration/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aioboto3>=15.1.0",
     "slugify>=0.0.1",
+    "pytest-asyncio>=1.2.0",
 ]
 
 [project.optional-dependencies]
