--- a/.gitignore
+++ b/.gitignore
@@ -199,5 +199,6 @@ services/libs/tinybird/.diff_tmp
 # claude code rules
 CLAUDE.md
 
-# git integration test repository (dynamically created)
-services/apps/git_integration/src/test/fixtures/test-repo/
+# git integration test repositories & output
+services/apps/git_integration/src/test/repos/
+services/apps/git_integration/src/test/outputs/custom/
