--- a/services/apps/git_integration/pyproject.toml
+++ b/services/apps/git_integration/pyproject.toml
@@ -36,14 +36,6 @@ dependencies = [
     "slugify>=0.0.1",
 ]
 
-[project.optional-dependencies]
-dev = [
-    "jedi>=0.18.1",
-    "pylint>=2.13.9",
-    "pytest>=7.0.0",
-    "yapf>=0.32.0",
-    "ruff>=0.3.0",
-]
 
 [project.scripts]
 crowd-git-ingest = "crowdgit.ingest:main"
@@ -85,3 +77,13 @@ quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
+
+[dependency-groups]
+dev = [
+    "jedi>=0.18.1",
+    "pylint>=2.13.9",
+    "pytest>=7.0.0",
+    "pytest-asyncio>=1.2.0",
+    "yapf>=0.32.0",
+    "ruff>=0.3.0",
+]
