--- a/services/apps/script_executor_worker/package.json
+++ b/services/apps/script_executor_worker/package.json
@@ -23,6 +23,7 @@
     "@temporalio/client": "~1.11.8",
     "@temporalio/workflow": "~1.11.8",
     "axios": "^1.6.8",
+    "csv-parse": "^5.5.6",
     "moment": "~2.29.4",
     "tsx": "^4.7.1",
     "typescript": "^5.6.3"
