--- a/services/apps/organizations_enrichment_worker/package.json
+++ b/services/apps/organizations_enrichment_worker/package.json
@@ -26,6 +26,7 @@
     "tsx": "^4.7.1",
     "typescript": "^5.6.3",
     "lodash.isequal": "^4.5.0",
+    "lodash.uniqby": "^4.7.0",
     "axios": "~1.6.2"
   },
   "devDependencies": {
